<?xml version="1.0"?>
<package>
  <name>kinova_driver</name>
  <version>0.0.1</version>
  <description>
          The ROS Kinova driver provides a ROS interface for the Kinova Robotics
          robotic manipulator arms. This stack provides access to the Kinova
          C++ hardware API through ROS.
  </description>

  <author email="ibaranov@clearpathrobotics.com">Ilia Baranov (Clearpath)</author>
  <author email="jschmidt@clearpathrobotics.com">Jeff Schmidt (Clearpath)</author>
  <author email="abencz@clearpathrobotics.com">Alex Bencz (Clearpath)</author>
  <author>Matt DeDonato (WPI)</author>
  <author email="braden@stenning.com">Braden Stenning</author>
  <maintainer email="ros@kinovarobotics.com">Kinova ROS Support</maintainer>
  <license>BSD</license>

  <url>http://wiki.ros.org/kinova_driver</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>kinova_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>kinova_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <export>
  </export>
</package>
