<?xml version="1.0"?>
<package>
  <name>kinova_arm_moveit_demo</name>
  <version>0.6.3</version>
  <description>The moveit_motion_plan package</description>
  <license>BSD</license>

  <author email="lzhao@kinova.ca">Longfei Zhao</author>
  <maintainer email="lzhao@kinova.ca">Longfei Zhao</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pluginlib</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>kinova_driver</build_depend>
  <build_depend>eigen_conversions</build_depend>

  <run_depend>pluginlib</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_fake_controller_manager</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_ros_perception</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>pr2_arm_kinematics</run_depend>
  <run_depend>pr2_moveit_config</run_depend>
  <run_depend>pr2_moveit_plugins</run_depend>
  <run_depend>kinova_driver</run_depend>
  <run_depend>eigen_conversions</run_depend>

</package>
